--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Quality Of Solution - {% block title %}{% endblock %}</title>
+        <title>CEEQ - {% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <link href="http://apps.qaci01.wic.west.com/static/common/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
@@ -195,7 +195,7 @@
 
         <script>
             $("#search-input").autocomplete({
-                source: "/quality/api/v1/searchAutoComplete",
+                source: "/ceeq/api/v1/searchAutoComplete",
                 autoFocus: true
             });
         </script>
