--- a/ceeq/apps/ceeq/templates/projects_start.html
+++ b/ceeq/apps/ceeq/templates/projects_start.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Projects Information {% endblock %}
+{% block title %} Projects {% endblock %}
 
 {% block body %}
 
