--- a/ceeq/apps/help/templates/faq.html
+++ b/ceeq/apps/help/templates/faq.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}FAQ{% endblock %}
+
 {% block body %}
     <div class="container">
         <h3>FAQ Page</h3>
