--- a/ceeq/apps/search/templates/search.html
+++ b/ceeq/apps/search/templates/search.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} SearchResults{% endblock %}
+
 {% block body %}
     <div class="container">
         <h3>Search Results</h3>
