--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -4,9 +4,15 @@
         <h3>
             Projects List<br></h3>
             {% if projects %}
-            <small><i class="fa fa-pencil"></i> Create a <a href="{% url 'project_new' %}"> New Project </a>
-                | <i class="fa fa-refresh"></i><a href="{% url 'project_update_scores' 1000000 %}"> Update All Scores</a></small>
-
+            <div class="row" style="margin-bottom: 20px;">
+                <div class="col-md-8">
+                    <small><i class="fa fa-pencil"></i> Create a <a href="{% url 'project_new' %}"> New Project </a>
+                        | <i class="fa fa-refresh"></i><a href="{% url 'project_update_scores' 1000000 %}" id="update_all"> Update All Scores</a></small>
+                </div>
+                <div class="col-md-2">
+                    <p id="throbber" hidden><i class="fa fa-spinner fa-2x fa-spin"></i> </p>
+                </div>
+            </div>
 
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-condensed table-bordered" style="text-transform: capitalize;">
@@ -30,7 +36,7 @@
                                             {{ project.score }}
                                     {% endif %}
                                 </td>
-                                <td><a href="{% url 'project_update_scores' project.id %}" style="color: green; padding-left: 25%; cursor: pointer; cursor: hand;"><i class="fa fa-refresh"></i></a> </td>
+                                <td><a href="{% url 'project_update_scores' project.id %}" id="update_single" style="color: green; padding-left: 25%; cursor: pointer; cursor: hand;"><i class="fa fa-refresh"></i></a> </td>
                             </tr>
                         {% endfor %}
                     </tbody>
