--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <link href="http://apps.qaci01.wic.west.com/static/common/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-        <link href="http://apps.qaci01.wic.west.com/static/common/bootswatch/3.0.0/flatly/bootstrap.min.css" rel="stylesheet">
+        <link href="http://apps.qaci01.wic.west.com/static/common/bootswatch/3.0.0/cerulean/bootstrap.min.css" rel="stylesheet">
         <link href="http://apps.qaci01.wic.west.com/static/quality/jqueryui/css/jquery-ui-1.9.2.custom.min.css" rel="stylesheet">
         <!--[if lt IE 9]>
             <script src="http://apps.qaci01.wic.west.com/static/common/bootstrap/3.0.0/assets/js/html5shiv.js"></script>
