--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -4,7 +4,202 @@
 
 {% block body %}
     <div class="container">
-        <h3>Guide Page</h3>
+        <body data-spy="scroll" data-target="#index">
+
+            <div class="row container" style="text-align: justify;">
+                <div class="col-xs-3">
+                    <div id="index">
+                        <ul class="nav nav-pills nav-stacked affix" data-spy="affix" data-offset-top="60" data-offset-bottom="200">
+                            <li><a href="#contact">Contact Information</a> </li>
+                            <li><a href="#introduction">Introduction</a> </li>
+                            <li><a href="#components_weight">Components Weights</a> </li>
+                            <li><a href="#jira_issue_weight">JIRA Issues Weights</a> </li>
+                            <li><a href="#testing_character">Testing Characteristics</a> </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-xs-9">
+                    <div id="contact">
+                        <h4 style="padding-top: 75px; margin-top: -75px;">Contact Information&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i> </a></h4>
+                        <ul>
+                            <li>Name: Gautham Pallapa</li>
+                            <li>Email: <a href="mailto:gpallapa@west.com">gpallapa@west.com</a></li>
+                            <li>Phone: 402-716-1393</li>
+                            <li>Department: Interactive Services</li>
+                            <li>Location: West 100 4th Floor East</li>
+                        </ul>
+                    </div>
+
+                    <div id="introduction">
+                        <h4 style="padding-top: 75px; margin-top: -75px;">Introduction&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
+                        <ul>
+                            <div id="introduction_about">
+                                <li><strong>About this user guide</strong></li>
+                                <p>This document is an introduction to the CEEQ - Comprehensive End-to-End Quality evaluation tool.
+                                There are some previous web application experience are presumed, such as: web search, web explore etc.</p>
+                                <p>This user guide does not cover 100% of the features, however, it will explain all the main concepts
+                                 and help you get started. At the meantime, it provides other learning resources for your further reading.
+                                This material will help you be ready to begin exploiting our tools.</p>
+                            </div>
+
+                            <div id="introduction_what">
+                                <li><strong>What is CEEQ?</strong></li>
+                                <p>Comprehensive End-to-End Quality is the novel framework to describe the measurement of
+                                IVR Applications based on tracked issues in JIRA system. CEEQ helps our testing procedure on assembled
+                                IVR Apps become more quick, easy and accurate through software lifecycle.</p>
+                                <p>As somebody says: "You cannot control what you cannot measure."
+                                    Measurement is the process by which numbers or symbols are assigned
+                                    to attributes of entities in the real world in such a way as to describe them
+                                    according to clearly defined unambiguous rules</p>
+                                <p>The Risk management of our testing procedure indicates that
+                                    IVR Apps failure has caused more than inconvenience.
+                                    The causes have ranged from poorly designed user interface to
+                                    direct programming errors.</p>
+                                <p>Also, an IVR application with good structural quality costs
+                                    less to maintain and is easier to understand and change in
+                                    response to pressing business needs.</p>
+                                <p>The CEEQ is expected to be useful in evaluating our internal IVR applications
+                                from begin to end.</p>
+                            </div>
+
+                            <div id="introduction_ack">
+                                <li><strong>Acknowledgements</strong></li>
+                                <p>Many people have contributed to Visilog. We would like to thank in particular (in
+                                alphabetical order): <br>Christian A Heyden, Gautham Pallapa, Songqing Liu,
+                                Richard Smith, Whitcomb Eric, and many more</p>
+
+                            </div>
+
+                            <div id="introduction_resource">
+                                <li><strong>Resources and Setup</strong></li>
+                                <p>CEEQ IVR apps monitoring system can be accessed online at
+                                    <a href="{% url 'landing' %}">{{ base_url }}{% url 'landing' %}</a> </p>
+                            </div>
+
+                            <div id="introduction_involved">
+                                <li><strong>Getting Involved</strong></li>
+                            </div>
+                        </ul>
+                    </div>
+
+                    <div id="components_weight">
+                        <h4 style="padding-top: 75px; margin-top: -75px;">Components Weight Factor&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
+                        <p>During the procedure of IVR applications testing, the ration of following components
+                        are considered as (2 : 2 : 3 : 1 : 4 : 8): (alphabet order)</p>
+                        <ul>
+                            <li>CXP - Customer Experience Portal</li>
+                                <ul>
+                                    <li>Real Feed</li>
+                                    <li>ODP - On Demand Portal</li>
+                                    <li>HCCP - Host Customer Contact Portal</li>
+                                    <li>User Portal</li>
+                                </ul>
+                            <li>CDR Feeds - Client Detail Reports</li>
+                            <li>Infrastructure Platform</li>
+                                <ul>
+                                    <li>Host</li>
+                                    <ul>
+                                        <li>WSSI</li>
+                                        <li>WSO2</li>
+                                    </ul>
+                                    <li>Voice Browser</li>
+                                    <li>Database</li>
+                                </ul>
+                            <li>Outbound</li>
+                                <ul>
+                                    <li>SMS</li>
+                                    <li>Outdial</li>
+                                </ul>
+                            <li>Reports</li>
+                                <ul>
+                                    <li>TXL/BHV Logs</li>
+                                    <li>Standard Reports</li>
+                                    <li>Custom Reports</li>
+                                </ul>
+                            <li>Voice Apps</li>
+                                <ul>
+                                    <li>Design</li>
+                                    <ul>
+                                        <li>Feature</li>
+                                        <li>VUI</li>
+                                    </ul>
+                                    <li>App Code</li>
+                                    <ul>
+                                        <li>Code</li>
+                                        <li>KVPs</li>
+                                    </ul>
+                                    <li>Web Service</li>
+                                    <li>Voice Slots</li>
+                                    <ul>
+                                        <li>English</li>
+                                        <li>Spanish</li>
+                                        <li>Others</li>
+                                    </ul>
+                                    <li>Grammars</li>
+                                </ul>
+
+                        </ul>
+
+                    </div>
+
+                    <div id="jira_issue_weight">
+                        <h4 style="padding-top: 75px; margin-top: -75px;">JIRA Issues Weight Factor&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
+
+                    </div>
+
+                    <div id="testing_character">
+                        <h4 style="padding-top: 75px; margin-top: -75px;">Software Testing Characteristics&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
+                        <p>Software Testing Characteristics considers the application of those techniques
+                            in evaluating the principal attributes used to describe the quality of
+                            software applications or systems.</p>
+                        <div id="testing_character_domain">
+                            <li><strong>Quality attributes for domain testing</strong></li></p>
+                            <p>Functional testing is focused on "what" the product does</p>
+                            <p>The following quality attributes are considered:</p>
+                            <ul>
+                                <li>Accuracy</li>
+                                    <p>considers the application of those techniques in evaluating the principal attributes used to describe the quality of software applications or systems.</p>
+                                <li>Suitability</li>
+                                    <p>Suitability testing involves evaluating and validating the appropriateness of a set of functions for its intended specified tasks. </p>
+                                <li>Interoperability</li>
+                                    <p>Interoperability testing tests whether a given application can function correctly in all intended target environments (hardware, software, middleware, operating system, etc.). </p>
+                                <li>Functional cecurity</li>
+                                    <p>Functional security testing (penetration testing) focuses on the ability of the software to prevent unauthorized access, whether accidental or deliberate, to functions and data. </p>
+                                <li>Usability</li>
+                                    <p>Usability testing measures the suitability of the software for its users, and is directed at measuring the following factors with which specified users can achieve specified goals in particular environments or contexts.</p>
+                                <li>Accessibility</li>
+                                    <p>It is important to consider the accessibility of software to those with particular requirements or restrictions in its use. This includes those with disabilities. </p>
+                            </ul>
+
+                        </div>
+
+                        <div id="testing_character_technical">
+                            <li><strong>Quality attributes for technical testing</strong></li></p>
+                            <p>Quality attributes for Technical Test Analysts focus on "how" the product works, rather than the functional aspects of "what" it does. These tests can take place at any test level, but have particular relevance for Component test</p>
+                            <p>The following quality attributes are considered:</p>
+                            <ul>
+                                <li>Technical Security</li>
+                                    <p>The principal concern regarding security is to prevent information from unintended use by unauthorized persons. Security testing attempts to compromise a system’s security policy by assessing a system’s vulnerability to threats.</p>
+                                <li>Reliability</li>
+                                    <p>An objective of reliability testing is to monitor a statistical measure of software maturity over time and compare this to a desired reliability goal. </p>
+                                <li>Efficiency</li>
+                                    <p>The efficiency quality attribute is evaluated by conducting tests focused on time and resource behavior. Efficiency testing relating to time behavior is covered below under the aspects of performance, load, stress and scalability testing.</p>
+                                <li>Maintainability</li>
+                                    <p>Maintainability tests in general relate to the ease with which software can be analyzed, changed and tested. Appropriate techniques for maintainability testing include static analysis and checklists.</p>
+                                <li>Portability</li>
+                                    <p>Portability tests in general relate to the ease with which software can be transferred into its intended environment, either initially or from an existing environment. Portability tests include tests for installability, co-existence/compatibility, adaptability and replaceability.</p>
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </body>
     </div>
 
 {% endblock %}
