Update guide and FAQ

--- a/ceeq/apps/help/templates/faq.html
+++ b/ceeq/apps/help/templates/faq.html
@@ -4,6 +4,51 @@
 
 {% block body %}
     <div class="container">
-        <h3>FAQ Page</h3>
+        <h2>Frequently Asked Questions</h2>
+
+        <div class="container">
+            <h3>Q: What is the CEEQ?</h3>
+            <p>
+                CEEQ - Comprehensive End-to-End Quality is the novel framework to describe the measurement of
+                IVR Applications based on tracked issues in JIRA system.
+            </p>
+            <h3>Q: Why I cannot look into the quality score of IVR Apps?</h3>
+            <p>
+                You need log in with your West Credential.
+            </p>
+            <h3>Q: Why I cannot log in with West Credential?</h3>
+            <p>
+                Please access <a href="https://idm.west.com/idm/west">West Identity Manger</a>
+                to check your username and password, or contact EIT 800-838-8383 for further support.
+            </p>
+            <h3>Q: What kind of browsers are supported?</h3>
+            <p>
+                The following browsers have validated for accessing this site:
+            </p>
+            <ul>
+                <li>Internet Explorer 9+</li>
+                <li>Google Chrome 29+</li>
+                <li>Mozilla Firefox 24+</li>
+            </ul>
+            <h3>Q: What the score's representation?</h3>
+            <p>
+                CEEQ ranges from <strong>0 -10</strong> to illustrate the quality of IVR Apps.
+                CEEQ helps our testing procedure on assembled IVR Apps become more quick,
+                easy and accurate through software lifecycle.
+            </p>
+            <h3>Q: Why I cannot edit the project information?</h3>
+            <p>
+                Only super user has authority to edit project information. General user has
+                the authority to access the quality score of the project.
+            </p>
+            <h3>Q: What's the role of JIRA issue's priority?</h3>
+            <p>
+                We take different priority of issues as different weighted factor to our framework.
+            </p>
+            <h3>Q: Why we need Testing Characteristics?</h3>
+            <p>Software Testing Characteristics describe the IVR Applications testing procedure during
+            it's software lifecycle. It will affect quality score of project in some degree.</p>
+        </div>
+
     </div>
 {% endblock %}
