--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -85,7 +85,8 @@
             <legend>Components Weighted Factors (Scales: 0 -1, Sum Left: {{ weight_left }})</legend>
             <p>All changes to Components Weighted Factors are made by the control on the right
             , re-save project not necessary.</p>
-            <p>Components Names: <strong>{{ component_names }}</strong></p>
+            <p>Standard Component Names: <strong>{{ component_names_standard }}</strong></p>
+            <p>Available Components Names: <strong>{{ component_names }}</strong></p>
         </div>
         <table class="table" id="factor_table">
             <thead>
