Fetch JIRA data exception

--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -35,6 +35,8 @@
                                         Out of Range
                                     {% elif project.score == -3 %}
                                         No open issues
+                                    {% elif project.score == -4 %}
+                                        No JIRA Data
                                     {% else %}
                                             {{ project.score }}
                                     {% endif %}
