--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -43,7 +43,11 @@
                                     {% elif project.score == -9 %}
                                         No evaluate
                                     {% else %}
+                                        {% if superuser %}
+                                            <a href="{% url 'project_versions_detail' project.id %}"> {{ project.score }}</a>
+                                        {% else %}
                                             {{ project.score }}
+                                        {% endif %}
                                     {% endif %}
                                 </td>
                                 <td><a href="{% url 'project_update_scores' project.id %}"
@@ -59,7 +63,6 @@
         </small>
         <p>No projects available</p>
         {% endif %}
-
     </div>
 
 {% endblock %}
