--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -7,7 +7,7 @@
 
         <form action="{% url 'project_edit' project.id %}" method="post">
             <div class="row">
-                <legend>Project Infomation</legend>
+                <legend>Project Information</legend>
             </div>
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
