--- a/ceeq/apps/projects/templates/project_version_detail.html
+++ b/ceeq/apps/projects/templates/project_version_detail.html
@@ -11,8 +11,6 @@
             <br>
         </div>
 
-
-
         {% if no_jira_data %}
             <h4>No JIRA Data fetched.</h4>
         {% else %}
@@ -21,7 +19,7 @@
                 <p>Standard Component Names: <strong>{{ component_names_standard }}</strong></p>
             </div>
             {% for version, weight_factor in weight_factor_versions.items %}
-                Affected Version: {{ version }}
+                Affected Version: <strong>{{ version }}</strong>
                 <table class="table table-hover table-striped" id="factor_table" >
                 <thead>
                     <tr>
@@ -67,13 +65,5 @@
 {% endblock %}
 
 {% block footer %}
-    <script>
-        function setAutoComplete() {
-            $("#new_component").autocomplete({
-                source: {{ component_names | safe }}, <!-- "ComponentListFromJIRA",-->
-                autoFocus: true,
-                minLength: 0
-            });
-        }
-    </script>
+
 {% endblock %}
