Continue working on defect density history data handle

--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -44,7 +44,7 @@
                                         No evaluate
                                     {% else %}
                                         {% if superuser %}
-                                            <a href="{% url 'project_versions_detail' project.id %}"> {{ project.score }}</a>
+                                            <a href="{% url 'project_defects_density' project.id %}"> {{ project.score }}</a>
                                         {% else %}
                                             {{ project.score }}
                                         {% endif %}
